[gd_scene load_steps=8 format=3 uid="uid://bblex8yqbemd7"]

[ext_resource type="FontFile" uid="uid://compj47jyyuo6" path="res://Kanit/Kanit-ExtraBoldItalic.ttf" id="1_qlpvw"]
[ext_resource type="FontFile" uid="uid://d0ihgny5jby4s" path="res://Kanit/Kanit-SemiBoldItalic.ttf" id="2_r2syn"]
[ext_resource type="Script" path="res://scripts/score.gd" id="3_bfi2a"]
[ext_resource type="PackedScene" uid="uid://p3mlabnn7ahe" path="res://scenes/end_game_button_back.tscn" id="4_hb1n1"]
[ext_resource type="FontFile" uid="uid://c2grvjpbtb0t7" path="res://Sigmar/Sigmar-Regular.ttf" id="5_cf5nr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qck7u"]
bg_color = Color(8.27849e-06, 0.643736, 0.824166, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8w2bk"]
bg_color = Color(0.439216, 0.839216, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_bfi2a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(1, 0.592157, 0.439216, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.5
offset_top = 400.0
offset_right = 255.5
offset_bottom = 565.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.913725, 1, 0.439216, 1)
theme_override_fonts/font = ExtResource("1_qlpvw")
theme_override_font_sizes/font_size = 110
text = "Tu mirei :("
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -237.5
offset_bottom = -162.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r2syn")
theme_override_font_sizes/font_size = 50
text = "Rezultatas:"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -235.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.913725, 1, 0.439216, 1)
theme_override_fonts/font = ExtResource("2_r2syn")
theme_override_font_sizes/font_size = 220
text = "10"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = 79.5
offset_right = 233.5
offset_bottom = 123.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r2syn")
theme_override_font_sizes/font_size = 29
text = "Did≈æiausias pasiektas rezultatas: 0"
horizontal_alignment = 1

[node name="Control" parent="." instance=ExtResource("4_hb1n1")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_top = -720.0
offset_bottom = -720.0
grow_vertical = 0

[node name="ButtonToMainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -520.0
offset_right = 289.0
offset_bottom = -394.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0.913725, 1, 0.439216, 1)
theme_override_colors/font_pressed_color = Color(0.913725, 1, 0.439216, 1)
theme_override_colors/font_color = Color(0.913725, 1, 0.439216, 1)
theme_override_fonts/font = ExtResource("5_cf5nr")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_qck7u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qck7u")
theme_override_styles/normal = SubResource("StyleBoxFlat_8w2bk")
text = "Pagrindinis"

[connection signal="pressed" from="ButtonToMainMenu" to="." method="_on_button_to_main_menu_pressed"]
